Add persist option.

--- a/templates/options.xl2tpd.conn-1.j2
+++ b/templates/options.xl2tpd.conn-1.j2
@@ -21,6 +21,9 @@ nodefaultroute
 # UUCP 形式のロックファイルを生成します。
 lock
 
+# 接続切断時に再接続を試みます。
+persist
+
 # Proxy ARP により接続してきたホストがローカルネットワークに在るように見せます。
 proxyarp
 
