--- a/templates/vpn-connect.sh.j2
+++ b/templates/vpn-connect.sh.j2
@@ -3,6 +3,9 @@
 
 export PATH=$PATH:/usr/sbin
 
+/usr/bin/systemctl restart ipsec
+/usr/bin/systemctl restart xl2tpd
+
 while true
 do
   ip a | grep -E 'inet.+ppp'
