--- a/templates/vpn-connect.sh.j2
+++ b/templates/vpn-connect.sh.j2
@@ -3,8 +3,10 @@
 
 export PATH=$PATH:/usr/sbin
 
+{% if ansible_distribution_major_version == "7" %}
 while true
 do
+{% endif %}
   ip a | grep -E 'inet.+ppp'
 
   if [ "$?" -eq 1 ]; then
@@ -15,6 +17,7 @@ do
     ip route add {{ vpn_local_cidr }} via ${ip} dev ppp${num}
     echo "ip route add {{ vpn_local_cidr }} via ${ip} dev ppp${num}"
   fi
-
+{% if ansible_distribution_major_version == "7" %}
   sleep 35
 done
+{% endif %}
