--- a/templates/chap-secrets.j2
+++ b/templates/chap-secrets.j2
@@ -2,4 +2,4 @@
 
 # Secrets for authentication using CHAP
 # client	server	secret			IP addresses
-"{{ vpn_username }}"     "xl2tpd"      "{{ vpn_password }}"       *
+"{{ l2tp_ipsec_client_username }}"     "xl2tpd"      "{{ l2tp_ipsec_client_password }}"       *
