--- a/templates/connection.conf.j2
+++ b/templates/connection.conf.j2
@@ -10,7 +10,7 @@ conn PEER_L2TP
   left=%defaultroute
   leftprotoport=17/1701
 
-  right={{ vpn_server }}
+  right={{ l2tp_ipsec_server_host }}
   rightprotoport=17/1701
 
   auto=add
