--- a/templates/xl2tpd.conf.j2
+++ b/templates/xl2tpd.conf.j2
@@ -9,7 +9,7 @@
 [lns default]
 
 [lac L2TP1]
-lns = {{ vpn_server }}
+lns = {{ l2tp_ipsec_server_host }}
 require chap = yes
 refuse pap = yes
 require authentication = yes
