--- a/templates/options.xl2tpd.conn-1.j2
+++ b/templates/options.xl2tpd.conn-1.j2
@@ -1,6 +1,6 @@
 # Managed by chef
 
-name {{ vpn_username }}
+name {{ l2tp_ipsec_client_username }}
 
 # 認証を設定しません。設定すると接続できない様子です。
 noauth
@@ -12,8 +12,8 @@ noipdefault
 crtscts
 
 # 最大受信単位 (MRU) と最大転送単位 (MTU) を指定します。
-mtu {{ vpn_mtu }}
-mru {{ vpn_mru }}
+mtu {{ l2tp_ipsec_client_mtu }}
+mru {{ l2tp_ipsec_client_mru }}
 
 # 相手側をゲートウェイとするディフォルト経路は追加しません。
 nodefaultroute
