--- a/templates/vpn-connect.sh.j2
+++ b/templates/vpn-connect.sh.j2
@@ -14,8 +14,8 @@ do
     sleep 5
     ip=$(ip a | grep -oP '(?<=peer ).+(?=\/32)')
     num=$(ip a | grep -oP '(?<=global ppp)[0-9](?=)')
-    ip route add {{ vpn_local_cidr }} via ${ip} dev ppp${num}
-    echo "ip route add {{ vpn_local_cidr }} via ${ip} dev ppp${num}"
+    ip route add {{ l2tp_ipsec_client_cidr }} via ${ip} dev ppp${num}
+    echo "ip route add {{ l2tp_ipsec_client_cidr }} via ${ip} dev ppp${num}"
   fi
 {% if ansible_distribution_major_version == "7" %}
   sleep 35
