Modify - common variables.

--- a/templates/options.xl2tpd.conn-1.j2
+++ b/templates/options.xl2tpd.conn-1.j2
@@ -12,8 +12,8 @@ noipdefault
 crtscts
 
 # 最大受信単位 (MRU) と最大転送単位 (MTU) を指定します。
-mtu {{ l2tp_ipsec_client_mtu }}
-mru {{ l2tp_ipsec_client_mru }}
+mtu {{ l2tp_ipsec_mtu }}
+mru {{ l2tp_ipsec_mru }}
 
 # 相手側をゲートウェイとするディフォルト経路は追加しません。
 nodefaultroute
