Update xl2tpd version to v1.3.8.

--- a/templates/options.xl2tpd.conn-1.j2
+++ b/templates/options.xl2tpd.conn-1.j2
@@ -9,7 +9,7 @@ noauth
 noipdefault
 
 # ハードウェアフロー制御 (RTS/CTS) を使用します。
-crtscts
+#crtscts
 
 # 最大受信単位 (MRU) と最大転送単位 (MTU) を指定します。
 mtu {{ l2tp_ipsec_mtu }}
@@ -19,7 +19,7 @@ mru {{ l2tp_ipsec_mru }}
 nodefaultroute
 
 # UUCP 形式のロックファイルを生成します。
-lock
+#lock
 
 # 接続切断時に再接続を試みます。
 persist
